...
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Dialog button 'close' -->
    <string name="dialog_button_close">Close</string>
    <!-- Dialog button 'retry' -->
    <string name="dialog_button_retry">Retry</string>
    <!-- Dialog button 'save' (save whatever changes were made in the dialog) -->
    <string name="dialog_button_save">Save</string>
    <!-- Dialog button 'cancel'-->
    <string name="dialog_button_cancel">Cancel</string>
    <!-- Shown when viewing the list of 'excluded' (blacklisted) songs, and it's empty-->
    <string name="dialog_exclude_list_empty">Exclude list is empty</string>
    <!-- Dialog title shown when attempting to delete a song -->
    <string name="dialog_delete_title">Delete</string>
...
